[package]
name = "acm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator = "0.3.2"

reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls", "json"]}
futures = "0.3.16"
futures-util = "0.3.16"
kube = { version = "0.59.0", default-features = false, features = ["client", "rustls-tls"] }
kube-runtime = "0.59.0"
k8s-openapi = { version = "0.13.0", features = ["v1_21"] }
tokio = { version = "1.8.1", features = ["process"] }
tokio-util = "0.6.7"
serde_json = "1.0.64"
serde = "1.0.130"
rocket = { version = "0.5.0-rc.1" }
uuid = "0.8.2"
rand = "0.8.4"
thiserror = "1.0.26"
env_logger = "0.9.0"
log = "0.4.14"
tonic-health = "0.4.0"
backoff = { version = "0.3.0", features = ["futures", "tokio"] }
tonic = "0.5.0"
ansi_term = "0.12.1"
either = "1.6.1"
chrono = "0.4.19"
lazy_static = "1.4.0"
sha2 = "0.9.6"
